--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     
   </title>
 
-  <link type="application/atom+xml" rel="alternate" href="https://www.zigindia.github.io/feed.xml" title="Zig India" />
+  <link type="application/atom+xml" rel="alternate" href="https://www.zigindia.github.io/website/feed.xml" title="Zig India" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
