deploy: ac26d273a25b79e9b8659420c3e36385ab643678

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon -->
 
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   
     <script type="text/javascript">
   window.addEventListener('load', themeChange);
