--- a/meetups.html
+++ b/meetups.html
@@ -24,7 +24,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon -->
 
-  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   
     <script type="text/javascript">
   window.addEventListener('load', themeChange);
