--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
   </title>
 
-  <link type="application/atom+xml" rel="alternate" href="https://www.zigindia.github.io/website/feed.xml" title="Zig India" />
+  <link type="application/atom+xml" rel="alternate" href="https://www.zigindia.org/feed.xml" title="Zig India" />
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
@@ -24,7 +24,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon -->
 
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
   
     <script type="text/javascript">
   window.addEventListener('load', themeChange);
