deploy: 7553ae3d5825e55323dc953eaf9c429f67610f49

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 
 <p>A low-level programming group based in India.
 Our meetups and discussions mostly surround the 
-<a href="https://ziglang.org/">Zig programming language</a>.</p>
+<a href="https://ziglang.org/">Zig</a> programming language.</p>
+
+<p>To learn more, go to <a href="/about/">/about</a>.</p>
 
 
 
@@ -150,7 +152,7 @@ Our meetups and discussions mostly surround the
   
     <li>
       <a href="feed.xml">
-        feed
+        RSS
       </a>
       &nbsp;&nbsp;
     </li>
