--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 Our meetups and discussions mostly surround the 
 <a href="https://ziglang.org/">Zig</a> programming language.</p>
 
-<p>To learn more, go to <a href="/about/">/about</a>.</p>
+<p>To learn more, go to <a href="/about">/about</a>.</p>
 
 
 
