deploy: 101e44e6e87b7fa61d48a5c342afb6503a4f6fd1

--- a/index.html
+++ b/index.html
@@ -89,13 +89,6 @@
     </li>
   
     <li>
-      <a href="https://twitter.com/zigblr">
-        twitter
-      </a>
-      &nbsp;&nbsp;
-    </li>
-  
-    <li>
       <a href="https://lu.ma/zigblr">
         calendar
       </a>
@@ -153,6 +146,13 @@ Our meetups and discussions mostly surround the
     <li>
       <a href="feed.xml">
         RSS
+      </a>
+      &nbsp;&nbsp;
+    </li>
+  
+    <li>
+      <a href="https://twitter.com/zigblr">
+        Twitter
       </a>
       &nbsp;&nbsp;
     </li>
