deploy: 9a64c1b90928be0c312d57c2fe1e38edd37099ac

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ Most of our discussions happen here.</p>
 
 <p>In-person meetups are held in Bengaluru.</p>
 
-<p>To get notified, you can follow the <a href="https://twitter.com/zigblr">twitter account</a>,
+<p>To get notified, you can follow the <a href="https://twitter.com/zigindia">twitter account</a>,
 join <a href="https://t.me/zigindia">Telegram</a>, subscribe to the <a href="/feed.xml">RSS feed</a>,
 or check <a href="https://lu.ma/zigblr">lu.ma</a>.</p>
 
