--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Our meetups and discussions mostly surround the
     </li>
   
     <li>
-      <a href="https://twitter.com/zigblr">
+      <a href="https://twitter.com/zigindia">
         Twitter
       </a>
       &nbsp;&nbsp;
