deploy: f7c489e710645dd7391a8932bb9d75f24d3ead8b

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
     </li>
   
     <li>
+      <a href="https://discord.gg/gNPetS9tkr">
+        discord
+      </a>
+      &nbsp;&nbsp;
+    </li>
+  
+    <li>
       <a href="https://t.me/zigindia">
         telegram
       </a>
