--- a/about.html
+++ b/about.html
@@ -69,29 +69,32 @@
 
 
 
-<p>We’re a group of systems programming enthusiasts –
-think graphics, game engines, browser runtimes, OS-dev,
+<p>A Zig and systems programming group. 
+Think graphics, game engines, browser runtimes, OS-dev,
 compilers, databases, emulators, and anything else in that ballpark.</p>
 
 <p>Though our meetups and discussions mostly surround Zig,
 we unequivocally welcome discourse about other tools — Rust, C, C++, Assembly, whatever.</p>
 
-<h2 id="telegram">Telegram</h2>
+<h2 id="discord">Discord</h2>
 
-<p>Click <a href="https://t.me/zigindia">here</a> to join the Telegram group.
-Most of our discussions happen here.</p>
+<p>Click <a href="https://discord.gg/gNPetS9tkr">here</a> to join the Discord server.
+Most of our discussions, live-streams, and chit-chats happen here.</p>
+
+<p>We are also on <a href="https://t.me/zigindia">Telegram</a>.</p>
 
 <h2 id="meetups">Meetups</h2>
 
 <p>In-person meetups are held in Bengaluru.</p>
 
 <p>To get notified, you can follow the <a href="https://twitter.com/zigindia">twitter account</a>,
-join <a href="https://t.me/zigindia">Telegram</a>, subscribe to the <a href="/feed.xml">RSS feed</a>,
-or check <a href="https://lu.ma/zigblr">lu.ma</a>.</p>
+join the <a href="https://discord.gg/gNPetS9tkr">Discord</a>,
+<a href="https://t.me/zigindia">Telegram</a>,
+subscribe to the <a href="/feed.xml">RSS feed</a>, or check <a href="https://lu.ma/zigblr">lu.ma</a>.</p>
 
 <h2 id="contact">Contact</h2>
 
-<p>General discussions happen on Telegram.
+<p>General discussions happen on Discord.
 To ask about the schedule, meetups, website, or venues, feel free to get in touch with:</p>
 
 <ul>
