deploy: 5c40ab80035d32a908501db08a85fdf2d808f347

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </li>
   
     <li>
-      <a href="https://discord.gg/gNPetS9tkr">
+      <a href="https://discord.gg/xVGCnDbwhJ">
         discord
       </a>
       &nbsp;&nbsp;
