--- a/index.html
+++ b/index.html
@@ -133,9 +133,15 @@ Our meetups and discussions mostly surround the
 <ul class="meetups">
 	
 	<li>
+		<a href="meetups/meetup-2">Meetup #2</a>   :
+		October Zig Meetup 
+		(Upcoming - 26/10/24)
+	</li>
+	
+	<li>
 		<a href="meetups/meetup-1">Meetup #1</a>   :
 		Zig India Kickoff 
-		(Upcoming – 31/08/24)
+		(31/08/24)
 	</li>
 	
 </ul>
