deploy: e015d0b6adaa558495c2fbd4e6612ef48a0c22e0

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@ Our meetups and discussions mostly surround the
 <ul class="meetups">
 	
 	<li>
+		<a href="meetups/meetup-3">Meetup #3</a>   :
+		December Zig Meetup 
+		(Upcoming - 29/12/24)
+	</li>
+	
+	<li>
 		<a href="meetups/meetup-2">Meetup #2</a>   :
 		October Zig Meetup 
 		(26/10/24)
